package com.udla.vehicleCirculation;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class VehicleCirculationCheckerApplication {

	public static void main(String[] args) {
		SpringApplication.run(VehicleCirculationCheckerApplication.class, args);
	}

}
